--- a/TcsInsurance/TcsInsurance/Views/Home/Index.cshtml
+++ b/TcsInsurance/TcsInsurance/Views/Home/Index.cshtml
@@ -7,7 +7,8 @@
 </p>
 <table class="table">
     <tr>
-        <th>DateTime</th>
+        <th>Start</th>
+        <th>Duration</th>
         <th>MethodName</th>
         <th>Input</th>
         <th>Output</th>
@@ -15,7 +16,8 @@
     </tr>
 @foreach (var item in Model) {
     <tr>
-        <td>@item.DateTime.ToString("yyyy-MM-dd hh-mm-ss")</td>
+        <td>@item.Start.ToString("yyyy-MM-dd hh-mm-ss")</td>
+        <td>@(item.End - item.Start).TotalMilliseconds.ToString() ms</td>
         <td>@item.Name</td>
         <td>@item.Input</td>
         <td>@item.Output</td>
